--- a/client/package.json
+++ b/client/package.json
@@ -10,20 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.15",
-    "@stripe/stripe-js": "^1.54.0",
-    "@testing-library/react": "^14.0.0",
-    "graphql": "^16.6.0",
-    "happy-dom": "^9.20.3",
-    "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "vitest": "^1.4.0"
+    "@apollo/client": "^3.10.1",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/stripe-js": "^3.3.0",
+    "@testing-library/react": "^15.0.5",
+    "graphql": "^16.8.1",
+    "happy-dom": "^14.7.1",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1",
+    "vitest": "^1.5.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
